--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@
 .nav_bg_color{
     color: aqua;
 }
+
+.navclass{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: blue;
+}
+
+.nav_bg_color{
+    color: aqua;
+}
